--- a/src/app/shared/sections/findtalents/findtalents.component.html
+++ b/src/app/shared/sections/findtalents/findtalents.component.html
@@ -1,63 +1,45 @@
 <div class="talents">
-<div>
+  <div>
     <p>Looking for an expert?</p>
 
-  <h1 class="header">Find top talents from JobNet.</h1>
+    <h1 class="header">Find top talents from JobNet.</h1>
 
-  <div class="accordion accordion-flush" id="accordionPanelsStayOpenExample">
-    <div class="accordion-item">
-      <h2 class="accordion-header">
-        <button
-          class="accordion-button"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#panelsStayOpen-collapseOne"
-          aria-expanded="true"
-          aria-controls="panelsStayOpen-collapseOne"
-        >
-          Seamless Search
-        </button>
-      </h2>
-      <div
-        id="panelsStayOpen-collapseOne"
-        class="accordion-collapse collapse show"
-        data-bs-parent="#accordionPanelsStayOpenExample"
-      >
-        <div class="accordion-body">
-          It only takes 5 minutes. Set-up is smooth and simple, with fully
-          customizable page design to reflect your brand. It only takes 5
-          minutes.
+    <div class="accordion accordion-flush" id="accordionPanelsStayOpenExample">
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button" type="button" data-bs-toggle="collapse"
+            data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true"
+            aria-controls="panelsStayOpen-collapseOne">
+            Seamless Search
+          </button>
+        </h2>
+        <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show"
+          data-bs-parent="#accordionPanelsStayOpenExample">
+          <div class="accordion-body">
+            It only takes 5 minutes. Set-up is smooth and simple, with fully
+            customizable page design to reflect your brand. It only takes 5
+            minutes.
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+            data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+            Hire Top Talents
+          </button>
+        </h2>
+        <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+          <div class="accordion-body">
+            Practice what you learned on realistic lorem quis test questions
+            testing.
+          </div>
         </div>
       </div>
     </div>
-    <div class="accordion-item">
-      <h2 class="accordion-header">
-        <button
-          class="accordion-button collapsed"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#flush-collapseTwo"
-          aria-expanded="false"
-          aria-controls="flush-collapseTwo"
-        >
-          Hire Top Talents
-        </button>
-      </h2>
-      <div
-        id="flush-collapseTwo"
-        class="accordion-collapse collapse"
-        data-bs-parent="#accordionFlushExample"
-      >
-        <div class="accordion-body">
-          Practice what you learned on realistic lorem quis test questions
-          testing.
-        </div>
-      </div>
-    </div>
+
+    <button class="talent-btn">Find Talents</button>
   </div>
-
-  <button class="talent-btn">Find Talents</button>
-</div>
 
   <div class="position-relative mt-3">
     <img src="/assets/shape-1.svg" width="55" height="55" class="position-absolute top-0 end-50 m-2" />
@@ -70,12 +52,7 @@
         <img src="/assets/img_8.jpg" class="w-100 h-auto mb-4" loading="lazy" />
         <div class="position-relative">
           <img src="/assets/img_9.jpg" class="h-auto w-100" loading="lazy" />
-          <img
-            src="/assets/shape-2.svg"
-            width="55"
-            height="55"
-            class="position-absolute top-50 end-0 end-lg-50"
-          />
+          <img src="/assets/shape-2.svg" width="55" height="55" class="position-absolute top-50 end-0 end-lg-50" />
         </div>
       </div>
     </div>
